removed stuff that will be implemented later and added some todo's

--- a/index.html
+++ b/index.html
@@ -16,20 +16,17 @@
 			<a-asset-item id="room-mtl" src="room.mtl"></a-asset-item>
 		</a-assets>
 
+		<!-- change lighting-->
 		<a-light type="ambient" color="#445451"></a-light>
 		<a-light type="point" intesity="2" position="2 4 4"></a-light>
 
 		<a-entity obj-model="obj: #room-obj; mtl: #room-mtl" scale="1.5 1.5 1.5"></a-entity>
 
-		<!--<a-text id="next" value="next" position="1.5 2 -1" align="center"></a-text>
-		<a-text id="prev" value="previous" position="-1.5 2 -1" align="center"></a-text>-->
-		<a-box id="next" position="2 2 -1" color="red" scale="0.3 0.3 0.3"></a-box>
-		<a-box id="prev" position="-2 2 -1" color="green" scale="0.3 0.3 0.3"></a-box>
-
 		<a-sky color="lightblue"></a-sky>
 		<a-plane src="#groundTexture" rotation="-90 0 0" width="100" height="100"></a-plane>
 
 		<a-camera id="camera">
+			<!-- TODO: create better cursor -->
 			<a-cursor fuse="true" timeout="10" color="#4CC3D9"></a-cursor>
 		</a-camera>
 	</a-scene>
