updated JSON reading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a-light type="ambient" color="#445451"></a-light>
 		<a-light type="point" intesity="2" position="2 4 4"></a-light>
 
-		<a-entity obj-model="obj: #room-obj; mtl: #room-mtl" scale="1.5 1.5 1.5"></a-entity>
+		<!--<a-entity obj-model="obj: #room-obj; mtl: #room-mtl" scale="1.5 1.5 1.5"></a-entity>-->
 
 		<a-sky color="lightblue"></a-sky>
 		<a-plane src="#groundTexture" rotation="-90 0 0" width="100" height="100"></a-plane>
