--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<img id="skyTexture" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
 			<img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
 
-			<a-asset-item id="room-obj" src="room.obj"></a-asset-item>
-			<a-asset-item id="room-mtl" src="room.mtl"></a-asset-item>
+			<!--<a-asset-item id="room-obj" src="room.obj"></a-asset-item>
+			<a-asset-item id="room-mtl" src="room.mtl"></a-asset-item>-->
 		</a-assets>
 
 		<!-- change lighting-->
