removed non-standard lighting

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		</a-assets>
 
 		<!-- change lighting-->
-		<a-light type="ambient" color="#445451"></a-light>
-		<a-light type="point" intesity="2" position="2 4 4"></a-light>
+		<!--<a-light type="ambient" color="#445451"></a-light>
+		<a-light type="point" intesity="2" position="2 4 4"></a-light>-->
 
 		<!--<a-entity obj-model="obj: #room-obj; mtl: #room-mtl" scale="1.5 1.5 1.5"></a-entity>-->
 
