--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!--
+ Copyright (C) 2017 Jean Büsche
+ 
+ This file is part of visensor-vr.
+ 
+ visensor-vr is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
+ 
+ visensor-vr is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+ 
+ You should have received a copy of the GNU General Public License
+ along with visensor-vr.  If not, see <http://www.gnu.org/licenses/>.
+ 
+-->
+
 <html>
 
 <head>
@@ -23,7 +43,7 @@
 		<!--<a-entity obj-model="obj: #room-obj; mtl: #room-mtl" scale="1.5 1.5 1.5"></a-entity>-->
 
 		<a-sky color="lightblue"></a-sky>
-		<a-plane src="#groundTexture" rotation="-90 0 0" width="100" height="100"></a-plane>
+		<!--<a-plane src="#groundTexture" rotation="-90 0 0" width="100" height="100"></a-plane>-->
 
 		<a-camera id="camera">
 			<!-- TODO: create better cursor -->
