--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!--
  Copyright (C) 2017 Jean Büsche
- 
+
  This file is part of visensor-vr.
- 
+
  visensor-vr is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
- 
+
  visensor-vr is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
- 
+
  You should have received a copy of the GNU General Public License
  along with visensor-vr.  If not, see <http://www.gnu.org/licenses/>.
- 
+
 -->
 
 <html>
@@ -56,15 +56,16 @@
 			<a-entity id="menu" ui-modal visible="false">
 				<a-plane width="4" height="1.5" color="red" position="0 0 -3">
 					<a-text value="color scheme:" position="-1.95 0.55 0" width="3.5"></a-text>
-					<a-plane width="0.6" height="0.3" color="red" position="-0.15 0.55 0.01">
+
+					<a-plane id="black_white" width="0.6" height="0.3" color="red" position="-0.15 0.55 0.01">
 						<a-text value="grayscale" position="-0.25 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane width="0.6" height="0.3" color="red" position="0.6 0.55 0.01">
+					<a-plane id="blue_white" width="0.6" height="0.3" color="red" position="0.6 0.55 0.01">
 						<a-text value="blue/white" position="-0.26 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane width="0.5" height="0.3" color="blue" position="1.5 0.55 0.01">
+					<a-plane id="infrared" width="0.5" height="0.3" color="blue" position="1.5 0.55 0.01">
 						<a-text value="infrared" position="-0.2 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
