--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 			<a-entity id="menu" ui-modal visible="false">
 				<a-plane width="4" height="1.5" color="red" position="0 0 -3">
-					<a-text value="color scheme:" position="-1.95 0.55 0" width="3.5"></a-text>
+					<a-text id="scheme" color="black" value="color scheme:" position="-1.95 0.55 0" width="3.5"></a-text>
 
 					<a-plane id="black_white" width="0.6" height="0.3" color="red" position="-0.15 0.55 0.01">
 						<a-text value="grayscale" position="-0.25 0 0" scale="0.5 0.5 0.5"></a-text>
@@ -67,6 +67,20 @@
 
 					<a-plane id="infrared" width="0.5" height="0.3" color="blue" position="1.5 0.55 0.01">
 						<a-text value="infrared" position="-0.2 0 0" scale="0.5 0.5 0.5"></a-text>
+					</a-plane>
+
+					<a-text id="sensor" color="grey" value="sensor:" position="-1.95 0 0" width="3.5"></a-text>
+
+					<a-plane id="temperature" width="0.7" height="0.3" color="red" position="-0.15 0 0.01">
+						<a-text value="temperature" position="-0.29 0 0" scale="0.5 0.5 0.5"></a-text>
+					</a-plane>
+
+					<a-plane id="illuminance" width="0.7" height="0.3" color="blue" position="0.7 0 0.01">
+						<a-text value="illuminance" position="-0.29 0 0" scale="0.5 0.5 0.5"></a-text>
+					</a-plane>
+
+					<a-plane id="humidity" width="0.55" height="0.3" color="red" position="1.6 0 0.01">
+						<a-text value="humidity" position="-0.22 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
 					<!--<a-plane width="0.6" height="0.3" color="blue" position="-.3 0.8 0.01">
