--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<a-text value="temperature" position="-0.29 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane id="illuminance" width="0.7" height="0.3" color="blue" position="0.7 0 0.01">
+					<a-plane id="illuminance" width="0.7" height="0.3" color="red" position="0.7 0 0.01">
 						<a-text value="illuminance" position="-0.29 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
