js dependencies are now local

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <html>
 
 <head>
-	<script src="https://aframe.io/releases/0.5.0/aframe.js"></script>
-	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="scripts/aframe.js"></script>
+	<script src="scripts/d3.v4.min.js"></script>
+	<script src="scripts/jquery-1.10.2.js"></script>
 
 	<!-- Include component script into your project along with A-Frame. -->
 	<script src="scripts/aframe-ui-widgets.min.js"></script>
@@ -34,10 +34,7 @@
 
 <body>
 	<a-scene stats>
-		<a-assets>
-			<img id="skyTexture" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
-			<img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
-		</a-assets>
+		<a-assets></a-assets>
 
 		<!-- change lighting-->
 		<!--<a-light type="ambient" color="#445451"></a-light>
