--- a/index.html
+++ b/index.html
@@ -37,33 +37,40 @@
 			<a-cursor cursor-feedback fuse="false" timeout="10" color="#4CC3D9"></a-cursor>
 
 			<a-entity id="menu" visible="false">
-				<a-plane width="4" height="1.5" color="red" position="0 0 -3">
+				<a-plane width="4" height="2" color="red" opacity="0.5" position="0 0 -3">
 					<a-text id="scheme" color="black" value="color scheme:" position="-1.95 0.55 0" width="3.5"></a-text>
 
-					<a-plane id="black_white" width="0.6" height="0.3" color="red" position="-0.15 0.55 0.01">
+					<a-plane id="black_white" width="0.6" height="0.3" color="red" opacity="0.5" position="-0.15 0.55 0.01">
 						<a-text value="grayscale" position="-0.25 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane id="blue_white" width="0.6" height="0.3" color="red" position="0.6 0.55 0.01">
+					<a-plane id="blue_white" width="0.6" height="0.3" color="red" opacity="0.5" position="0.6 0.55 0.01">
 						<a-text value="blue/white" position="-0.26 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane id="infrared" width="0.5" height="0.3" color="blue" position="1.5 0.55 0.01">
+					<a-plane id="infrared" width="0.5" height="0.3" color="blue" opacity="0.5" position="1.5 0.55 0.01">
 						<a-text value="infrared" position="-0.2 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
 					<a-text id="sensor" color="grey" value="sensor:" position="-1.95 0 0" width="3.5"></a-text>
 
-					<a-plane id="temperature" width="0.7" height="0.3" color="red" position="-0.15 0 0.01">
+					<a-plane id="temperature" width="0.7" height="0.3" color="red" opacity="0.5" position="-0.15 0 0.01">
 						<a-text value="temperature" position="-0.29 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane id="illuminance" width="0.7" height="0.3" color="red" position="0.7 0 0.01">
+					<a-plane id="illuminance" width="0.7" height="0.3" color="red" opacity="0.5" position="0.7 0 0.01">
 						<a-text value="illuminance" position="-0.29 0 0" scale="0.5 0.5 0.5"></a-text>
 					</a-plane>
 
-					<a-plane id="humidity" width="0.55" height="0.3" color="red" position="1.6 0 0.01">
+					<a-plane id="humidity" width="0.55" height="0.3" color="red" opacity="0.5" position="1.6 0 0.01">
 						<a-text value="humidity" position="-0.22 0 0" scale="0.5 0.5 0.5"></a-text>
+					</a-plane>
+
+					<a-plane id="color_theme_img" height="0.5" width="2" position="0 -0.55 0.1" src="infrared.png">
+						<a-text id="min_value" value="-1.00" position="-1.3 0 0" width="3" align="right"></a-text>
+						<a-text id="max_value" value="-1.00" position="1.1 0 0" width="3"></a-text>
+						<a-plane class="degSign" src="centigrades_texture_red.png" position="-1.2 0 0" scale="0.12 0.1" color="white" transparent=true></a-plane>
+						<a-plane class="degSign" src="centigrades_texture_red.png" position="1.55 0 0" scale="0.12 0.1" color="white" transparent=true></a-plane>
 					</a-plane>
 				</a-plane>
 			</a-entity>
